--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite --port 3000"
+    "start": "vite --port 3000 --host 0.0.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
