--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "./node_modules/.bin/vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite --port 3000 --host 0.0.0.0"
+    "start": "./node_modules/.bin/vite --port 3000 --host 0.0.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
