--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "./node_modules/.bin/vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "./node_modules/.bin/vite --port 3000 --host 0.0.0.0"
+    "start": "vite --port 3000 --host 0.0.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -51,7 +51,8 @@
     "swiper": "^8.0.0",
     "tsparticles": "^2.12.0",
     "twilio-video": "^2.31.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
