--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite --port 3000 --host 0.0.0.0"
+    "start": "serve -s build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -51,8 +51,7 @@
     "swiper": "^8.0.0",
     "tsparticles": "^2.12.0",
     "twilio-video": "^2.31.0",
-    "uuid": "^11.1.0",
-    "vite": "^4.4.5"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
